--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>GitHub repo example</title>
   </head>
   <body>
-    <h1>Hello Git</h1>
-    <h2>We are learning Git</h2>
+    <h1>Hello Githun</h1>
+    <h2>We are learning Github, it's awesome and free</h2>
     <form>
       <input type="email" placeholder="Enter your email" />
       <input type="password" placeholder="Enter your password" />
