changed p elements to li elements

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
       <div class="row">
         <div class="col-4">
           <h4><span id="day"></span></h4>
-          <p><span id="date"></span></p>
-          <p><span id="time"><span></p>
-          <p id="weather-description"></p>
+          <ul>
+          <li><span id="date"></span></li>
+          <li><span id="time"><span></li>
+          <li id="weather-description"></li>
+          </ul>
         </div>
         <div class="col-4">
           <i class="fa-solid fa-sun weather-now m-3"></i>
@@ -66,10 +68,12 @@
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
         </div>
         <div class="col">
-          <p></p>
+          <ul>
+            <li></li>
           <!-- <p id="#precipitation"><strong>Precipitation:</strong> 9%</p> -->
-          <p><span id="humidity"><strong>Humidity:</strong></span></p>
-          <p><span id="wind"><strong>Wind:</strong></span></p>
+          <li><span id="humidity"><strong>Humidity:</strong></span></li>
+          <li><span id="wind"><strong>Wind:</strong></span></li>
+          </ul>
         </div>
       </div>
 </div>
