--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
-
-    <!-- <link rel="stylesheet" href="/weather-app/src/styles.css/" /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+       <link rel="stylesheet" href="src/styles.css" />
+           <link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/a56b22975c.js"
       crossorigin="anonymous"
@@ -27,6 +25,13 @@
     <div class="container">
     <div class="container-wrapper">
         <h1>Always take the weather with you</h1>
+        <!-- <form>
+    <div class="row">
+                <div class="col-3">
+                  <input type="click" value="Current 🌎" id="current-location-button" class="btn btn-success w-100">
+                </div>
+            </div>
+</form> -->
         <form id="search-weather">
             <div class="row">
                 <label class="form-label ml-3">Get your 5 Day Forecast:</label>
@@ -38,7 +43,7 @@
                 <div class="col-2">
                     <input type="submit" id="search" value="Search" class="btn btn-primary">
                 </div>
-                <div class="col-2">
+                <div class="col-">
                   <input type="click" value="Current 🌎" id="current-location-button" class="btn btn-success w-100">
                 </div>
             </div>
@@ -70,7 +75,6 @@
         <div class="col">
           <ul>
             <li></li>
-          <!-- <p id="#precipitation"><strong>Precipitation:</strong> 9%</p> -->
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
           <li><span id="wind"><strong>Wind:</strong></span></li>
           </ul>
