--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-2">
                     <input type="submit" id="search" value="Search" class="btn btn-primary">
                 </div>
-                <div class="col-">
+                <div class="col-3">
                   <input type="click" value="Current 🌎" id="current-location-button" class="btn btn-success w-100">
                 </div>
             </div>
@@ -84,28 +84,29 @@
 <div class="container">   
  <div class="card">
      <div class="card-body">
+         <h4>Five Day Forecast</h4>
          <div class="row">
-             <div class="card col 2 m-2 p-4">
+             <div class="card col m-2 p-3">
                  <h4 class="card.title">Tue</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-             <div class="card col 2 m-2 p-4">
+             <div class="card col m-2 p-4">
                  <h4 class="card.title">Wed</h4>
                  <i class="fa-solid fa-cloud-sun weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-             <div class="card col 2 m-2 p-4">
+             <div class="card col m-2 p-4">
                  <h4 class="card.title">Thur</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-             <div class="card col 2 m-2 p-4">
+             <div class="card col m-2 p-4">
                  <h4 class="card.title">Fri</h4>
                  <i class="fa-solid fa-cloud-bolt weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-             <div class="card col 2 m-2 p-4">
+             <div class="card col m-2 p-4">
                  <h4 class="card.title">Sat</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
