Changed grid for current weather and increased temp font size

--- a/index.html
+++ b/index.html
@@ -58,25 +58,30 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-4">
+        <div class="col-6">
           <h4><span id="day"></span></h4>
           <ul>
+    
           <li><span id="date"></span></li>
           <li><span id="time"><span></li>
           <li id="weather-description"></li>
+          <button id="celcius-temp">°C</button>
+          <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
           </ul>
         </div>
-        <div class="col-4">
+        <!-- <div class="col-4">
           <i class="fa-solid fa-sun weather-now m-3"></i>
-          <br />
-        <button id="celcius-temp">°C</button>
+          <br /> -->
+        <!-- <button id="celcius-temp">°C</button>
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
-        </div>
-        <div class="col">
+        </div> -->
+        <div class="col-6">
           <ul>
             <li></li>
+            <li>  <i class="fa-solid fa-sun weather-now m-3"></i></li>
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
           <li><span id="wind"><strong>Wind:</strong></span></li>
+               <br />
           </ul>
         </div>
       </div>
