--- a/index.html
+++ b/index.html
@@ -25,13 +25,6 @@
     <div class="container">
     <div class="container-wrapper">
         <h1>Always take the weather with you</h1>
-        <!-- <form>
-    <div class="row">
-                <div class="col-3">
-                  <input type="click" value="Current 🌎" id="current-location-button" class="btn btn-success w-100">
-                </div>
-            </div>
-</form> -->
         <form id="search-weather">
             <div class="row">
                 <label class="form-label ml-3">Get your 5 Day Forecast:</label>
@@ -59,6 +52,7 @@
       <br />
       <div class="row">
         <div class="col-6">
+        <div class="clearfix">
           <h4><span id="day"></span></h4>
           <ul>
     
@@ -67,6 +61,7 @@
           <li id="weather-description"></li>
           <button id="celcius-temp">°C</button>
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
+          </div>
           </ul>
         </div>
         <!-- <div class="col-4">
@@ -76,12 +71,14 @@
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
         </div> -->
         <div class="col-6">
+            <div class="clearfix">
           <ul>
             <li></li>
-            <li>  <i class="fa-solid fa-sun weather-now m-3"></i></li>
+            <li>  <i class="fa-solid fa-sun weather-now m-3 floattop"></i></li>
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
           <li><span id="wind"><strong>Wind:</strong></span></li>
                <br />
+            </div>   
           </ul>
         </div>
       </div>
@@ -120,8 +117,11 @@
      </div>
  </div> 
  </div>
-    </div>
-    <p><a href="https://github.com/TokiLoshi/weather-app">Open source code</a> by Bianca Silva</p>
+ <div>
+  <p><a href="https://github.com/TokiLoshi/weather-app">Open source code</a> by Bianca Silva</p>
+  </div>
+   </div>
     <script type="text/javascript" src="src/app.js"></script>
+   
     </body>
 </html>
