--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
  </div> 
  </div>
  <div>
-  <p><a href="https://github.com/TokiLoshi/weather-app">Open source code</a> by Bianca Silva</p>
+  <p class="open-source"><a href="https://github.com/TokiLoshi/weather-app">Open source code</a> by Bianca Silva</p>
   </div>
    </div>
     <script type="text/javascript" src="src/app.js"></script>
