--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <ul>
     
           <li><span id="date"></span></li>
-          <li><span id="time"><span></li>
+          <li class="last-updated">last updated: <span id="time"><span></li>
           <li id="weather-description"></li>
           <button id="celcius-temp">°C</button>
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
