--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <div class="row">
         <div class="col-6">
         <div class="clearfix">
-          <h4><span id="day"></span></h4>
+            <div class="weather-forecast-day">
+          <h4><span id="day"></span></h4></div>
           <ul>
     
           <li><span id="date"></span></li>
