--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <div class="col-6">
         <div class="clearfix">
             <div class="weather-forecast-day">
+              <!-- <li class="last-updated"</li> -->
           <h4><span id="day"></span></h4></div>
           <ul>
-    
           <li><span id="date"></span></li>
-          <li class="last-updated">last updated: <span id="time"><span></li>
+          <li class="last-updated"><em>Last updated: </em><span id="time"><span></li>
           <li id="weather-description"></li>
           <button id="celcius-temp">°C</button>
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
