reformat coding for show weather and day and clean up comments

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <div class="clearfix">
           <ul>
             <li></li>
+            <li id="weather-element floattop"></li></li>
             <li>  <i class="fa-solid fa-sun weather-now m-3 floattop"></i></li>
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
           <li><span id="wind"><strong>Wind:</strong></span></li>
