added icon cleaned up code and reordered elements in html

--- a/index.html
+++ b/index.html
@@ -44,22 +44,24 @@
 <br />
 <div class="container-location">
       <div class="row">
-        <div class="col-4">
-          <h2><span id="user-city"><strong></strong></span></h2>
+        <div class="col-6">
+          <!-- <h2><span id="user-city"><strong></strong></span></h2> -->
           <!-- <h3 id ="user-country">Mozambique 🇲🇿</h3> -->
+          <h4><span id="day"></span></h4>
+          <div class="row">
+          <li><span id="date"></span></li>
+          </div>
+          <li class="last-updated"><em>Last updated: </em><span id="time"><span></li>
         </div>
       </div>
       <br />
       <div class="row">
         <div class="col-6">
-        <div class="clearfix">
             <div class="weather-forecast-day">
-              <!-- <li class="last-updated"</li> -->
-          <h4><span id="day"></span></h4></div>
           <ul>
-          <li><span id="date"></span></li>
-          <li class="last-updated"><em>Last updated: </em><span id="time"><span></li>
+          <h2><span id="user-city"><strong></strong></span></h2>
           <li id="weather-description"></li>
+          <br />
           <button id="celcius-temp">°C</button>
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
           </div>
@@ -72,11 +74,10 @@
           <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
         </div> -->
         <div class="col-6">
-            <div class="clearfix">
-          <ul>
-            <li></li>
-            <li id="weather-element floattop"></li></li>
-            <li>  <i class="fa-solid fa-sun weather-now m-3 floattop"></i></li>
+            <div class=" weather-conditions">
+            <!-- <li></li> -->
+            <img src="" alt="" id="weather-element" class="float-top">
+            <ul>
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
           <li><span id="wind"><strong>Wind:</strong></span></li>
                <br />
