updated to convert celcius to fahrenheit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="submit" id="search" value="Search" class="btn btn-primary">
                 </div>
                 <div class="col-3">
-                  <input type="click" value="Current 🌎" id="current-location-button" class="btn btn-success w-100">
+                  <input type="click" value="Here 🌎" id="current-location-button" class="btn btn-success w-100">
                 </div>
             </div>
         </form>
@@ -62,8 +62,9 @@
           <h2><span id="user-city"><strong></strong></span></h2>
           <li id="weather-description"></li>
           <br />
-          <button id="celcius-temp">°C</button>
-          <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
+          <button id="celcius-temp"></button>
+          <button id="to-celcius-temp">°C</button> 
+          <button id="to-fahrenheit-temp" class="farenheit-temp-style">/ °F</button>
           </div>
           </ul>
         </div>
