--- a/index.html
+++ b/index.html
@@ -62,9 +62,26 @@
           <h2><span id="user-city"><strong></strong></span></h2>
           <li id="weather-description"></li>
           <br />
-          <button id="celcius-temp"></button>
-          <button id="to-celcius-temp">°C</button> 
-          <button id="to-fahrenheit-temp" class="farenheit-temp-style">/ °F</button>
+          <a id="celcius-temp"></a>
+<!-- <div class="btn-group btn-group-toggle" data-toggle="buttons" aria-pressed="true">
+  <label class="btn btn-primary btn-sm active" id="to-celcius-temp">
+  <input type="radio" name="options" autocomplete="off" checked />°C</label>
+  <label class="btn btn-sm" id="to-celcius-temp"><input type="radio" name="options" autocomplete="off">°F</label>
+</div> -->
+<!-- <button id="to-celcius-temp" type="button" data-toggle="buttons" aria-pressed="true" autocomplete="off" active><input type="radio" checked autocomplete="off">
+  °C
+</button>
+<button id="to-fahrenheit-temp" type="button" data-toggle="buttons" aria-pressed="false" autocomplete="off"><input type="radio" checked autocomplete="off">
+  °F
+</button> -->
+<a href="#" id="to-celcius-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" aria-selected="true">°C </a>
+<a href="#" id="to-fahrenheit-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="false">/ °F</a>
+
+<!-- <button id="to-celcius-temp" type="radio" autocomplete="off" data-togg>°C</button> 
+          <button id="to-fahrenheit-temp" data-toggle="buttons" type="radio" autocomplete="off">/ °F</button> -->
+
+          <!-- <button id="to-celcius-temp" type="radio">°C</button> 
+          <button id="to-fahrenheit-temp" data-toggle="buttons" type="radio">/ °F</button> -->
           </div>
           </ul>
         </div>
@@ -88,7 +105,7 @@
       </div>
 </div>
 <div class="container">   
- <div class="card">
+ <!-- <div class="card">
      <div class="card-body">
          <h4>Five Day Forecast</h4>
          <div class="row">
@@ -117,7 +134,7 @@
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-         </div>
+         </div> -->
      </div>
  </div> 
  </div>
