--- a/index.html
+++ b/index.html
@@ -63,25 +63,10 @@
           <li id="weather-description"></li>
           <br />
           <a id="celcius-temp"></a>
-<!-- <div class="btn-group btn-group-toggle" data-toggle="buttons" aria-pressed="true">
-  <label class="btn btn-primary btn-sm active" id="to-celcius-temp">
-  <input type="radio" name="options" autocomplete="off" checked />°C</label>
-  <label class="btn btn-sm" id="to-celcius-temp"><input type="radio" name="options" autocomplete="off">°F</label>
-</div> -->
-<!-- <button id="to-celcius-temp" type="button" data-toggle="buttons" aria-pressed="true" autocomplete="off" active><input type="radio" checked autocomplete="off">
-  °C
-</button>
-<button id="to-fahrenheit-temp" type="button" data-toggle="buttons" aria-pressed="false" autocomplete="off"><input type="radio" checked autocomplete="off">
-  °F
-</button> -->
-<a href="#" id="to-celcius-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" aria-selected="true">°C </a>
-<a href="#" id="to-fahrenheit-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="false">/ °F</a>
 
-<!-- <button id="to-celcius-temp" type="radio" autocomplete="off" data-togg>°C</button> 
-          <button id="to-fahrenheit-temp" data-toggle="buttons" type="radio" autocomplete="off">/ °F</button> -->
+<a href="" id="to-celcius-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" active>°C </a>
+<a href="" id="to-fahrenheit-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="false">/ °F</a>
 
-          <!-- <button id="to-celcius-temp" type="radio">°C</button> 
-          <button id="to-fahrenheit-temp" data-toggle="buttons" type="radio">/ °F</button> -->
           </div>
           </ul>
         </div>
@@ -93,7 +78,6 @@
         </div> -->
         <div class="col-6">
             <div class=" weather-conditions">
-            <!-- <li></li> -->
             <img src="" alt="" id="weather-element" class="float-top">
             <ul>
           <li><span id="humidity"><strong>Humidity:</strong></span></li>
