--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
           <li id="weather-description"></li>
           <br />
           <a id="celcius-temp"></a>
-
-<a href="" id="to-celcius-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" active>°C </a>
-<a href="" id="to-fahrenheit-temp" class="btn btn-primary btn-lg active" role="button" aria-pressed="false">/ °F</a>
-
+<span class="units">
+<a href="#" id="to-celcius-temp" class="btn btn-light btn-lg active" aria-pressed="true">°C </a>
+<!-- <a href="#" id="to-celcius-temp" class="active" role="button" aria-pressed="true" active>°C </a> -->
+<a href="#" id="to-fahrenheit-temp" class="btn btn-light btn-lg" aria-pressed="false">/ °F</a>
+</span>
           </div>
           </ul>
         </div>
@@ -88,8 +89,8 @@
         </div>
       </div>
 </div>
-<div class="container">   
- <!-- <div class="card">
+<!-- <div class="container">   
+ <div class="card">
      <div class="card-body">
          <h4>Five Day Forecast</h4>
          <div class="row">
@@ -118,8 +119,8 @@
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <p class="card-text"><strong>24°C</strong> / 75°F</p> </p>
              </div>
-         </div> -->
-     </div>
+         </div>
+     </div> -->
  </div> 
  </div>
  <div>
