--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
          <h4>Five Day Forecast</h4>
          <div class="row">
              <div class="card col-2 m-2 p-3">
-                 <h4 class="card.title">Tue</h4>
+                 <h4 class="weather-forecast-day">Tue</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span><span></span></p>
              </div>
              <div class="card col-2 m-2 p-3">
-                 <h4 class="card.title">Wed</h4>
+                 <h4 class="weather-forecast-day">Wed</h4>
                  <i class="fa-solid fa-cloud-sun weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span> </p>
              </div>
              <div class="card col-2 m-2 p-3">
-                 <h4 class="card.title">Thu</h4>
+                 <h4 class="weather-forecast-day">Thu</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span>
              </div>
              <div class="card col-2 m-2 p-3">
-                 <h4 class="card.title">Fri</h4>
+                 <h4 class="weather-day">Fri</h4>
                  <i class="fa-solid fa-cloud-bolt weather-icon"></i>
                 <span class="card-text"><strong>24°C</strong> / 75°F</span>
              </div>
              <div class="card col-2 m-2 p-3">
-                 <h4 class="card.title">Sat</h4>
+                 <h4 class="weather-day">Sat</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span>
              </div>
