--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
  <div class="card">
      <div class="card-body">
          <h4>Five Day Forecast</h4>
-         <div class="row">
-             <div class="card col-2 m-2 p-3">
+        <div id="weather-forecast-data">
+      <!-- <div class="card col-2 m-2 p-3">
                  <h4 class="weather-forecast-day">Tue</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span><span></span></p>
@@ -118,7 +118,8 @@
                  <h4 class="weather-day">Sat</h4>
                  <i class="fa-solid fa-cloud-rain weather-icon"></i>
                  <span class="card-text"><strong>24°C</strong> / 75°F</span>
-             </div>
+             </div>` -->
+        </div>
          </div>
      </div>
  </div> 
@@ -131,3 +132,6 @@
    
     </body>
 </html>
+
+
+
