--- a/index.html
+++ b/index.html
@@ -60,29 +60,23 @@
             <div class="weather-forecast-day">
           <ul>
           <h2><span id="user-city"><strong></strong></span></h2>
-          <li id="weather-description"></li>
+          <!-- <li id="weather-description"></li> -->
           <br />
           <a id="celcius-temp"></a>
 <span class="units">
 <a href="#" id="to-celcius-temp" class="btn btn-light btn-lg active" aria-pressed="true">°C </a>
-<!-- <a href="#" id="to-celcius-temp" class="active" role="button" aria-pressed="true" active>°C </a> -->
 <a href="#" id="to-fahrenheit-temp" class="btn btn-light btn-lg" aria-pressed="false">/ °F</a>
 </span>
           </div>
           </ul>
         </div>
-        <!-- <div class="col-4">
-          <i class="fa-solid fa-sun weather-now m-3"></i>
-          <br /> -->
-        <!-- <button id="celcius-temp">°C</button>
-          <button id="fahrenheit-temp" class="farenheit-temp-style">/°F</button>
-        </div> -->
         <div class="col-6">
             <div class=" weather-conditions">
             <img src="" alt="" id="weather-element" class="float-top">
+             <li id="weather-description"></li>
             <ul>
-          <li><span id="humidity"><strong>Humidity:</strong></span></li>
-          <li><span id="wind"><strong>Wind:</strong></span></li>
+          <li><span id="humidity">Humidity:</span></li>
+          <li><span id="wind">Wind:</span></li>
                <br />
             </div>   
           </ul>
@@ -94,39 +88,14 @@
      <div class="card-body">
          <h4>Five Day Forecast</h4>
         <div id="weather-forecast-data">
-      <!-- <div class="card col-2 m-2 p-3">
-                 <h4 class="weather-forecast-day">Tue</h4>
-                 <i class="fa-solid fa-cloud-rain weather-icon"></i>
-                 <span class="card-text"><strong>24°C</strong> / 75°F</span><span></span></p>
-             </div>
-             <div class="card col-2 m-2 p-3">
-                 <h4 class="weather-forecast-day">Wed</h4>
-                 <i class="fa-solid fa-cloud-sun weather-icon"></i>
-                 <span class="card-text"><strong>24°C</strong> / 75°F</span> </p>
-             </div>
-             <div class="card col-2 m-2 p-3">
-                 <h4 class="weather-forecast-day">Thu</h4>
-                 <i class="fa-solid fa-cloud-rain weather-icon"></i>
-                 <span class="card-text"><strong>24°C</strong> / 75°F</span>
-             </div>
-             <div class="card col-2 m-2 p-3">
-                 <h4 class="weather-day">Fri</h4>
-                 <i class="fa-solid fa-cloud-bolt weather-icon"></i>
-                <span class="card-text"><strong>24°C</strong> / 75°F</span>
-             </div>
-             <div class="card col-2 m-2 p-3">
-                 <h4 class="weather-day">Sat</h4>
-                 <i class="fa-solid fa-cloud-rain weather-icon"></i>
-                 <span class="card-text"><strong>24°C</strong> / 75°F</span>
-             </div>` -->
         </div>
          </div>
      </div>
- </div> 
  </div>
  <div>
   <p class="open-source"><a href="https://github.com/TokiLoshi/weather-app">Open source code</a> by Bianca Silva</p>
-  </div>
+  </div> 
+ </div>
    </div>
     <script type="text/javascript" src="src/app.js"></script>
    
