Updated conversion buttons, headlines

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <br />
           <a id="celcius-temp"></a>
 <span class="units">
-<a href="#" id="to-celcius-temp" class="btn btn-light btn-lg active" aria-pressed="true">°C </a>
-<a href="#" id="to-fahrenheit-temp" class="btn btn-light btn-lg" aria-pressed="false">/ °F</a>
+<a href="#" id="to-celcius-temp" class="btn btn-light btn-lg active" aria-pressed="true">C </a>
+<a href="#" id="to-fahrenheit-temp" class="btn btn-light btn-lg" aria-pressed="false">/ F</a>
 </span>
           </div>
           </ul>
