--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="submit" id="search" value="Search" class="btn btn-primary">
                 </div>
                 <div class="col-3">
-                  <input type="click" value="Here 🌎" id="current-location-button" class="btn btn-success w-100">
+                  <input type="click" value="Your location 🌎" id="current-location-button" class="btn btn-success w-100">
                 </div>
             </div>
         </form>
@@ -60,6 +60,7 @@
             <div class="weather-forecast-day">
           <ul>
           <h2><span id="user-city"><strong></strong></span></h2>
+          <p id="flag-emoji"></p>
           <!-- <li id="weather-description"></li> -->
           <br />
           <a id="celcius-temp"></a>
